ui: add profile editor
